<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="8dp"
    android:paddingStart="8dp"
    android:paddingEnd="16dp"
    android:paddingTop="8dp">

    <ImageView
        android:id="@+id/RecipeIconImageView"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:padding="8dp"
        tools:src="@drawable/recipe_icon"
        android:contentDescription="@string/recipe_icon" />

    <TextView
        android:id="@+id/RecipeNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:textSize="17sp"
        tools:textColor="@color/black"
        tools:text="Apple" />

    <ImageButton
        android:id="@+id/RecipeItemEditButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        android:scaleType="fitXY"
        android:src="@drawable/edit_icon"
        android:contentDescription="@string/recipe_edit_button" />

    <ImageButton
        android:id="@+id/RecipeItemRemoveButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        android:scaleType="fitXY"
        android:src="@drawable/delete_icon"
        android:contentDescription="@string/recipe_remove_button" />

</LinearLayout>