<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingTop="8dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/IngredientItemNameEditText"
            android:hint="@string/ingredient_name_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/IngredientQuantityEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="0dp"
            android:autofillHints=""
            android:inputType="text" />

        <EditText
            android:id="@+id/IngredientQuantityEditText"
            android:hint="@string/ingredient_quantity_hint"
            android:inputType="numberSigned"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/IngredientUnitEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/IngredientItemNameEditText"
            android:layout_margin="0dp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/IngredientUnitEditText"
            android:hint="@string/ingredient_unit_hint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/IngredientQuantityEditText"
            app:layout_constraintTop_toBottomOf="@+id/IngredientItemNameEditText"
            android:layout_margin="0dp"
            android:autofillHints=""
            android:inputType="text" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/RecipeRegistrationRemoveButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        android:scaleType="fitXY"
        android:src="@drawable/delete_icon"
        android:contentDescription="@string/recipe_registration_image_button_content_description" />

</LinearLayout>