<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/RecipeNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipe_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/RecipeNameEditText"
        tools:layout_editor_absoluteX="24dp" />

    <EditText
        android:id="@+id/RecipeNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/IngredientsTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RecipeNameTextView" />

    <TextView
        android:id="@+id/IngredientsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredients"
        app:layout_constraintBottom_toBottomOf="@id/AddNewIngredientButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RecipeNameEditText" />

    <Button
        android:id="@+id/AddNewIngredientButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_ingredient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RecipeNameEditText" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/DialogRecyclerView"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddNewIngredientButton"
        app:layout_constrainedHeight="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/ingredient_registration_item"/>

</androidx.constraintlayout.widget.ConstraintLayout>